--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -5,11 +5,36 @@ body {
 img {
   width: 100px;
   height: 100px;
+
+}
+
+.container {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  gap: 32px;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.plant-container {
+  display: flex;
+  align-items: center;
+  gap: 52px;
+}
+.plant {
+  width: 200px;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+
+}
+
+.text {
+  text-align: center;
 }
 
 /* do not edit this footer */
