Solve 05-flex-modal

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  padding: 20px;
 }
 
 .icon {
@@ -33,8 +37,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
-
+.container {
+  display: flex;
+  flex-flow:row wrap;
+  padding: 12px;
+  padding-top: 0;
+  gap: 10px;
+}
+.header {
+ font-weight: bold;
+ font-size: 18px;
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
@@ -46,6 +61,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+}
+
+.text {
+
 }
 
 button {
