--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,18 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display:flex;
+  flex-flow: column;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.header{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  gap: 10px;
 }
 
 img {
@@ -16,6 +28,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 5px 20px;
 }
 
 input {
@@ -24,4 +37,43 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul {
+  /* this removes the dots on the list items*/
+  list-style-type: none;
+  display: flex;
+}
+
+a {
+  /* this removes the line under our links */
+  text-decoration: none;
+  color: #000000;
+}
+
+.content {
+  display:flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.footer{
+  background-color: #eeeeee;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+}
+
+.left-links {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+}
+
+.right-links {
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
 }
