--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -4,25 +4,67 @@ body {
   min-height: 100vh;
 }
 
+ul {
+  /*this removes the dots on the list items */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  padding-bottom: 16px;
+}
+a {
+  /* this removes the line under our links */
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 24px;
+}
 .header {
-  height: 72px;
+  height: 32px;
+  font-weight: 900;
   background: darkmagenta;
   color: white;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+}
+
+.content {
+  display:flex;
+  justify-content: space-between;
+
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+  gap: 16px;
 }
 
 .card {
+  width: 300px;
+  height: 200px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 10px;
 }
